Layout added with StackView and RecyclerView adapter. (Basic flow working)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BusinessViewer</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
 </resources>
