--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="search">Search</string>
     <string name="search_for_businesses">Search for Businesses</string>
     <string name="showing_nearby">Showing nearby&#160;</string>
+    <string name="error_search_term">Please enter a search Term</string>
 </resources>
